--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "private": true,
   "dependencies": {
     "aphrodite": "^2.4.0",
-    "axios": "0.18.1",
+    "axios": "^0.18.1",
+    "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16.3": "^1.7.3",
+    "json-server": "^0.16.2",
     "moment": "^2.24.0",
     "next": "^8.1.0",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.1",
+    "react-scripts": "2.1.7",
     "react-test-renderer": "^16.13.1",
     "react-with-styles": "^4.1.0",
     "react-with-styles-interface-aphrodite": "^6.0.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-pack": "^0.1.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
@@ -31,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "mockserver": "json-server --watch --delay 500 --port 4000 mock/db.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,10 +64,22 @@
     "storybook-addon-jsx": "^7.1.13"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addons": "^6.0.21",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addons": "^6.0.26",
     "@storybook/react": "^6.0.21",
     "sass-loader": "^10.0.2",
     "storybook-addon-jsx": "^7.3.4"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/key921211/do-it-example.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/key921211/do-it-example/issues"
+  },
+  "homepage": "https://github.com/key921211/do-it-example#readme"
 }
